--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/core": "^4.1.3",
     "@angular/forms": "^4.1.3",
     "@angular/http": "^4.1.3",
-    "@angular/material": "^2.0.0-beta.6",
+    "@angular/material": "^2.0.0-beta.5",
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
@@ -28,29 +28,30 @@
     "angular2-moment": "^1.3.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "moment": "^2.18.1",
-    "rxjs": "^5.4.0",
+    "moment": "^2.17.1",
+    "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.8"
+    "typescript": "^2.3.3",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.0",
+    "@angular/cli": "^1.0.4",
     "@angular/compiler-cli": "^2.3.1",
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "2.5.38",
-    "@types/karma": "^0.13.35",
-    "@types/node": "^6.0.77",
-    "codelyzer": "^2.0.1",
+    "@types/karma": "^0.13.33",
+    "@types/node": "^6.0.42",
+    "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.1.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "^4.5.1",
-    "typescript": "^2.3.4"
+    "tslint": "^4.0.2",
+    "typescript": "~2.0.3"
   }
 }
