--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@angular/animations": "^4.1.3",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
-    "@angular/compiler-cli": "^4.1.3",
     "@angular/core": "^4.1.3",
     "@angular/forms": "^4.1.3",
     "@angular/http": "^4.1.3",
@@ -26,17 +25,18 @@
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
     "angular2-moment": "^1.3.3",
+    "bulma": "^0.4.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.17.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "typescript": "^2.3.3",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.4",
-    "@angular/compiler-cli": "^2.3.1",
+    "@angular/cli": "^1.1.0",
+    "@angular/compiler-cli": "^4.1.3",
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "2.5.38",
     "@types/karma": "^0.13.33",
@@ -52,6 +52,7 @@
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
-    "typescript": "~2.0.3"
+    "typescript": "^2.3.4",
+    "webpack": "^2.6.1"
   }
 }
