--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "angular2-moment": "^1.3.3",
     "bulma": "^0.4.2",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "moment": "^2.17.1",
+    "moment": "^2.18.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
