--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "libphonenumber-js": "^0.4.15",
     "moment": "^2.18.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
